# ocaml-partyfy

./: dune-project  ocaml_partyfy.opam
lib/: dune
test/: dune
